remove padding from selects, fix minor layout bugs

--- a/src/app/events/event-list.component.scss
+++ b/src/app/events/event-list.component.scss
@@ -7,6 +7,7 @@
 .event-list {
   padding: 15px;
   display: flex;
+  flex-direction: column;
   flex-grow: 1;
   overflow: auto;
 }
