--- a/src/app/shared/components/sg-rules-manager.component.scss
+++ b/src/app/shared/components/sg-rules-manager.component.scss
@@ -1,11 +1,11 @@
 :host {
   display: inline-block;
   text-align: right;
-  margin-top: 16px;
+  //margin-top: 16px;
 
   .mat-input-wrapper {
     text-align: left;
-    padding-top: 10px;
+    padding-top: 18px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
