--- a/src/app/spare-drive/spare-drive-creation/spare-drive-creation.component.scss
+++ b/src/app/spare-drive/spare-drive-creation/spare-drive-creation.component.scss
@@ -9,5 +9,4 @@
 
 :host cs-slider {
   display: block;
-  margin-top: 15px;
 }
