--- a/src/app/vm/vm-creation/template/vm-template.component.scss
+++ b/src/app/vm/vm-creation/template/vm-template.component.scss
@@ -1,5 +1,5 @@
 .mat-input-wrapper {
-  padding-top: 10px;
+  padding-top: 18px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
